Ajout de features

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
 * {
     overflow-x: hidden;
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+    scrollbar-width: none;
+    scrollbar-color: #a5a1a1 transparent;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 7px;
+    height: 10px;
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+*::-webkit-scrollbar-thumb {
+    background: rgba(90, 90, 90);
+}
